--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
 <meta charset="utf-8">
 </head>
 <body>
-	<h1><a href="index.html">WEB</a></h1>
+	<h1><a href="index.html">하이 똥지똥지</a></h1>
 <ol>
 	<li><a href="1.html">HTML</a></li>
 	<li><a href="1.html">CSS</a></li>
 	<li><a href="1.html">Javascript</a></li>
 </ol>
-<ul>
- 	<li>egoing</li>
-  	<li>k8805</li>
-  	<li>sorialgi</li>
-</ul>
+
 
 <h1 style="font-size:40px">HTML</h1>
 <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.</p><img src="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7648.png" width="50%"><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
